# mdium

./: .env.example  .gitignore  .hlint.yaml  .stylish-haskell.yaml  .travis.yml  BUILD.bazel  CHANGELOG.md  Dockerfile  README.md  WORKSPACE  package.yaml  stack-snapshot.yaml  stack.yaml
.github/workflows/: build.yml
app/: GetOpt.hs  Main.hs
example/: example.md
patch/: BUILD.bazel  fix-rules-docker.patch
src/Mdium/: API.hs  Cmd.hs  Env.hs
src/Mdium/Cmd/: Options.hs  Run.hs
